# fastapi-redis-chat

./: pyproject.toml  requirements.txt  requirements_dev.txt
chat_backend/: config.py  main.py  schemas.py
